--- a/src/app/components/heating/heating.component.css
+++ b/src/app/components/heating/heating.component.css
@@ -1,7 +1,11 @@
 .encompassPage {
     display: grid;
-    padding: 1rem;
-    grid-template-columns: repeat(2, 1fr); /* Twee kolommen per rij */
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 2rem;
+    justify-items: center;
+    padding-left: 15rem; 
+    padding-right: 15rem;
+    padding-top: 3rem;
 }
 
 .content-container {
@@ -9,15 +13,13 @@
 }
 
 .service-image {
-    width: auto; /* Pas de breedte aan op basis van je ontwerp */
-    height: 30rem; /* Houd de aspect ratio van de afbeelding */
-    object-fit: cover; /* Zorgt ervoor dat de afbeelding de container vult */
-    place-items: center;
+    width: 100%;
+    height: 100%; 
+    max-height: 35rem;
+    min-height: 20rem;
 }
 
-.text-content {
-    flex: 1;
-}
+
 
 h5 {
     line-height: 1.7;
