--- a/src/app/components/square/square.component.css
+++ b/src/app/components/square/square.component.css
@@ -1,6 +1,5 @@
 .square {
-  width: 70%; 
-  padding: 3vw; 
+  width: 100%;  
   box-sizing: border-box;
 }
 
